# SAKTI-AI

./: .env.example  .gitignore  README.md  jobmatcher-talentforger-plan.md  main.py  pyproject.toml  skills-lock.json
.claude/skills/deepagents-python-quickstart/: SKILL.md
.claude/skills/deepagents-typescript-quickstart/: SKILL.md
.claude/skills/eval-engineering/: SKILL.md
.claude/skills/langchain-python-quickstart/: SKILL.md
.claude/skills/langchain-typescript-quickstart/: SKILL.md
.claude/skills/langgraph-python-quickstart/: SKILL.md
.claude/skills/langgraph-typescript-quickstart/: SKILL.md
data/: result-full_AFTER_SKILL_PARSERS.json
src/: app.py
src/core/: config.py  error_handler.py  exceptions.py  http.py
src/domain/cvparser/: cvparser.py  pdf_extractor.py  schema.py
src/domain/insight/: insight.py
src/domain/job_matcher/: __init__.py  schemas.py  value_objects.py
src/domain/psychometric/: ocean.py  riasec.py
src/domain/shared/: __init__.py  skill_evidence.py  user_profile.py
src/domain/talent_forger/: __init__.py  schemas.py  value_objects.py
src/features/job_matcher/: __init__.py  router.py  service.py
src/features/talent_forger/: __init__.py  router.py  service.py
src/infrastructure/adapters/: __init__.py  onboarding_adapter.py
src/infrastructure/graphs/: job_matcher_graph.py  talent_forger_graph.py
tests/: test_cv_extractor.py  test_cvparser_personal_info.py  test_deepseek.py  test_job_matcher_graph.py  test_onboarding_adapter.py  test_pdf_extractor.py  test_scoring.py  test_talent_forger_graph.py
(+26 files in other folders)
