[project]
name = "sakti-ai"
version = "0.1.0"
description = "SAKTI AI service for CV parsing and extraction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gipi Argy", email = "gipi@example.com" }
]
keywords = ["cv-parser", "ai", "nlp", "onboarding", "fastapi"]

dependencies = [
    # API & Web Framework
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic[email]",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    # Database & ORM
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "redis",
    # Task Queue
    "celery[redis]",
    # Document Parsing
    "pdfplumber",
    "python-docx",
    "spacy",
    # ML / NLP
    "sentence-transformers",
    "scikit-learn",
    "numpy",
    "pandas",
    "torch",
    # Utilities
    "thefuzz",
    "python-levenshtein",
    "python-dotenv",
    "httpx",
    "boto3",
    "Pillow",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "google-genai>=1.67.0",
    "chromadb>=1.5.5",
    "langchain-chroma>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "factory-boy",
    "ruff",
    "mypy",
    "pre-commit",
]
demo = [
    "streamlit",
    "gradio",
]
